<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/CurrentSemesterButton"
            android:layout_gravity="center"
            android:layout_width="230dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/current"
            android:background="@drawable/rounded_department"
            android:layout_marginTop="8dp"
            android:layout_margin="8dp"
            android:textAllCaps="false"
            android:drawableTop="@drawable/ic_baseline_calendar_today_24"
            android:onClick="buttonCurrentSemesterOnClick"
            />

        <Button
            android:id="@+id/CompletedSemesterButton"
            android:layout_width = "230dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/completed"
            android:background="@drawable/rounded_department"
            android:layout_margin="8dp"
            android:textAllCaps="false"
            android:drawableTop="@drawable/baseline_done_24"
            android:onClick="buttonCompletedSemestersOnClick"
            />

        <Button
            android:id="@+id/UpcomingSemesterButton"
            android:layout_width = "230dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/upcoming"
            android:background="@drawable/rounded_department"
            android:layout_margin="8dp"
            android:textAllCaps="false"
            android:drawableTop="@drawable/baseline_upcoming_24"
            android:onClick="buttonUpcomingSemestersOnClick"
            />

        <Button
            android:id="@+id/EditPlanButton"
            android:layout_width = "230dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/managePlan"
            android:background="@drawable/rounded_department"
            android:layout_margin="8dp"
            android:textAllCaps="false"
            android:drawableTop="@drawable/ic_baseline_edit_24"
            android:onClick="buttonManagePlanOnClick"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>