<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/ApplicationName"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/LookUpCourseButton"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/courses"
            android:background="@drawable/rounded_department"
            android:layout_marginTop="8dp"
            android:layout_margin="8dp"
            android:textAllCaps="false"
            android:drawableTop="@drawable/ic_baseline_class_24"
            android:onClick="buttonLookUpCourseOnClick"
            />

        <Button
            android:id="@+id/PlanButton"
            android:layout_width = "250dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/myPlan"
            android:background="@drawable/rounded_department"
            android:layout_margin="8dp"
            android:textAllCaps="false"
            android:drawableTop="@drawable/ic_baseline_calendar_today_24"
            android:onClick="buttonPlanCourseOnClick"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>